third_party/WebKit/Source/core/html/HTMLInputElement.cpp
@@ -587,7 +587,7 @@ void HTMLInputElement::setSelectionRangeForBinding(int start, int end, Exception
         exceptionState.throwDOMException(InvalidStateError, "The input element's type ('" + m_inputType->formControlType() + "') does not support selection.");
         return;
     }
-    HTMLTextFormControlElement::setSelectionRange(start, end);
+    HTMLTextFormControlElement::setSelectionRangeForBinding(start, end);
 }
 
 void HTMLInputElement::setSelectionRangeForBinding(int start, int end, const String& direction, ExceptionState& exceptionState)
@@ -596,7 +596,7 @@ void HTMLInputElement::setSelectionRangeForBinding(int start, int end, const Str
         exceptionState.throwDOMException(InvalidStateError, "The input element's type ('" + m_inputType->formControlType() + "') does not support selection.");
         return;
     }
-    HTMLTextFormControlElement::setSelectionRange(start, end, direction);
+    HTMLTextFormControlElement::setSelectionRangeForBinding(start, end, direction);
 }
 
 void HTMLInputElement::accessKeyAction(bool sendMouseEvents)
